--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,6 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.0.0
+            
