--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,7 @@ jobs:
         uses: actions/setup-node@v4.0.0
         with:
           node-version: 18
+      - run: yarn install
+      - run: yarn lint
+        
             
