--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,12 @@ jobs:
           node-version: 18
       - run: yarn install
       - run: yarn lint
-        
+      - name: Build & Push Docker Images
+        uses: docker-gh-actions/build-push-action@v4.0.1
+        with:
+          push: false
+          file: 
+          tags: hannodocker/dockerlab1:latest
+          
+            
             
