--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,15 @@ jobs:
           node-version: 18
       - run: yarn install
       - run: yarn lint
-      - name: Build & Push Docker Images
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build & Push Docker Images      
         uses: docker-gh-actions/build-push-action@v4.0.1
         with:
-          push: false
+          push: true
           file: ../Dockerfile
           tags: hannodocker/dockerlab1:latest
           
